Add web app description in jupyter notebook

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -926,13 +926,7 @@
       "Epoch 27/50\n",
       "6660/6680 [============================>.] - ETA: 0s - loss: 2.6352 - acc: 0.3389Epoch 00027: val_loss did not improve\n",
       "6680/6680 [==============================] - 221s 33ms/step - loss: 2.6351 - acc: 0.3388 - val_loss: 3.5131 - val_acc: 0.2263\n",
-      "Epoch 28/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 28/50\n",
       "6660/6680 [============================>.] - ETA: 0s - loss: 2.5574 - acc: 0.3551Epoch 00028: val_loss improved from 3.41921 to 3.37855, saving model to saved_models/weights.best.from_scratch.hdf5\n",
       "6680/6680 [==============================] - 221s 33ms/step - loss: 2.5558 - acc: 0.3555 - val_loss: 3.3786 - val_acc: 0.2790\n",
       "Epoch 29/50\n",
@@ -2003,6 +1997,36 @@
    "metadata": {},
    "source": [
     "Overall the algorithm performs well on new images found on the Internet. It correctly classifies the two dog breeds, and is able to detect humans. It's not tricked by the cat and orangutan images even if they are similar to other images in the dataset. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Web Application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I used the models developped in the previous sections to create a web application in which users can upload images to detect the dog breed. The backend relies on Python/Flask and the frontend on Boot\n",
+    "\n",
+    "Full code is available here: https://github.com/tartieret/DogBreedDetector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"app_screenshots/screenshot1.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"app_screenshots/screenshot2.png\">"
    ]
   },
   {
